-- ============================================================
-- ESQUEMA PostgreSQL - Sistema Integral de Control de Acceso (UGEL)
-- Versión "limpia" (DDL) basada en tu dump, con:
--   - Tablas renombradas a SINGULAR (solo nombre, mismo contenido)
--   - Columnas reordenadas para lectura (mismos tipos/defaults)
--   - Índices existentes + índices recomendados (buen rendimiento)
--
-- Recomendación: ejecutar en una BD VACÍA.
-- ============================================================

BEGIN;

-- ============================================
-- FUNCIONES / TRIGGERS
-- ============================================

CREATE OR REPLACE FUNCTION public.prevent_delete_system_user()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
  IF OLD.es_sistema THEN
    RAISE EXCEPTION 'No se puede eliminar el usuario de sistema';
  END IF;
  RETURN OLD;
END;
$$;

CREATE OR REPLACE FUNCTION public.fn_planilla_asistencia_personal(
  p_personal_id integer,
  p_fecha_desde date,
  p_fecha_hasta date
)
RETURNS TABLE (
  fecha date,
  dia_semana text,
  hora_prog_entrada time without time zone,
  hora_prog_salida time without time zone,
  -- ELIMINADO: hora_descanso_ini y hora_descanso_fin (ya no devolvemos esto fijo)
  hora_real_entrada time without time zone,
  hora_real_salida time without time zone,
  horas_asignadas interval,
  horas_trabajadas interval,
  atraso interval,
  estado_presencia text,
  observacion text
)
LANGUAGE plpgsql
STABLE
AS $$
DECLARE
  -- Jornada efectiva de trabajo (8 horas)
  v_jornada_efectiva  CONSTANT INTERVAL := INTERVAL '8 hours';
BEGIN
  -- Forzar TZ Lima
  PERFORM set_config('TimeZone', 'America/Lima', true);

  RETURN QUERY
  SELECT
    d::date                                                  AS fecha,
    to_char(d::date, 'Dy')                                   AS dia_semana,

    -- Hora Entrada Programada
    COALESCE(cfg.hora_entrada, TIME '09:00')                 AS hora_prog_entrada,
    
    -- Hora Salida Programada (Entrada + 8 horas exactas)
    (COALESCE(cfg.hora_entrada, TIME '09:00') + v_jornada_efectiva)::time AS hora_prog_salida,

    -- Horas Reales
    cap.ingreso::time                                        AS hora_real_entrada,
    cap.salida::time                                         AS hora_real_salida,

    v_jornada_efectiva                                       AS horas_asignadas,

    -- CÁLCULO SIMPLIFICADO: Salida - Entrada (Sin descontar almuerzo fijo)
    CASE
      WHEN cap.ingreso IS NOT NULL AND cap.salida IS NOT NULL THEN
        (cap.salida - cap.ingreso)
      ELSE INTERVAL '0'
    END                                                      AS horas_trabajadas,

    make_interval(mins => COALESCE(cap.minutos_tardanza, 0)) AS atraso,

    COALESCE(cap.estado_presencia, 'SIN REGISTRO')           AS estado_presencia,
    COALESCE(cap.observacion, '')                            AS observacion
  FROM
    generate_series(p_fecha_desde, p_fecha_hasta, INTERVAL '1 day') AS d
    LEFT JOIN LATERAL (
      SELECT c.hora_entrada
      FROM public.config_asistencia_personal c
      WHERE c.activo = true
        AND c.aplica_desde <= d::date
        AND (c.personal_id = p_personal_id OR c.personal_id IS NULL)
      ORDER BY (c.personal_id = p_personal_id) DESC, c.aplica_desde DESC
      LIMIT 1
    ) cfg ON true
    LEFT JOIN LATERAL (
      SELECT cap.*
      FROM public.controlasistenciapersonal cap
      WHERE cap.personal_id = p_personal_id
        AND cap.ingreso::date = d::date
      ORDER BY cap.ingreso ASC
      LIMIT 1
    ) cap ON true
  WHERE
    EXTRACT(DOW FROM d) BETWEEN 1 AND 5; -- Lunes a Viernes
END;
$$;

-- ============================================
-- SECUENCIAS (la de papeletas se mantiene porque existía en tu dump)
-- ============================================

CREATE SEQUENCE public.papeletas_codigo_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;

-- ============================================
-- TABLAS (RENOMBRADAS A SINGULAR)
-- ============================================

CREATE TABLE public.areadestino (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  nombre_area character varying(150) NOT NULL,
  activa boolean DEFAULT true NOT NULL,
  CONSTRAINT areasdestino_pkey PRIMARY KEY (id),
  CONSTRAINT areasdestino_nombre_area_key UNIQUE (nombre_area)
);

CREATE TABLE public.tipodocumento (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  codigo character varying(10) NOT NULL,
  codigo_sunat character varying(5),
  nombre_completo character varying(100) NOT NULL,
  activo boolean DEFAULT true NOT NULL,
  CONSTRAINT tiposdocumento_pkey PRIMARY KEY (id),
  CONSTRAINT tiposdocumento_codigo_key UNIQUE (codigo)
);

CREATE TABLE public.tipocontrato (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  nombre_tipo character varying(100) NOT NULL,
  activo boolean DEFAULT true NOT NULL,
  CONSTRAINT tiposcontrato_pkey PRIMARY KEY (id),
  CONSTRAINT tiposcontrato_nombre_tipo_key UNIQUE (nombre_tipo)
);

CREATE TABLE public.motivovisita (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  nombre_motivo character varying(150) NOT NULL,
  activo boolean DEFAULT true NOT NULL,
  CONSTRAINT motivosvisita_pkey PRIMARY KEY (id),
  CONSTRAINT motivosvisita_nombre_motivo_key UNIQUE (nombre_motivo)
);

CREATE TABLE public.cargo (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  nombre_cargo character varying(150) NOT NULL,
  descripcion text,
  activo boolean DEFAULT true NOT NULL,
  fecha_creacion timestamp without time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
  CONSTRAINT cargos_pkey PRIMARY KEY (id),
  CONSTRAINT cargos_nombre_cargo_key UNIQUE (nombre_cargo)
);

CREATE TABLE public.personal (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  tipo_documento_id integer,
  numero_documento character varying(20) NOT NULL,
  nombres character varying(150) NOT NULL,
  apellidos character varying(150) NOT NULL,
  fecha_nacimiento date,
  email character varying(150),
  area_destino_id integer NOT NULL,
  cargo_id integer,
  tipo_contrato_id integer NOT NULL,
  activo boolean DEFAULT true NOT NULL,
  CONSTRAINT personal_pkey PRIMARY KEY (id),
  CONSTRAINT fk_personal_cargo FOREIGN KEY (cargo_id) REFERENCES public.cargo(id),
  CONSTRAINT personal_area_destino_id_fkey FOREIGN KEY (area_destino_id) REFERENCES public.areadestino(id),
  CONSTRAINT personal_tipo_contrato_id_fkey FOREIGN KEY (tipo_contrato_id) REFERENCES public.tipocontrato(id),
  CONSTRAINT personal_tipo_documento_id_fkey FOREIGN KEY (tipo_documento_id) REFERENCES public.tipodocumento(id)
);

CREATE TABLE public.usuario (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  personal_id integer,
  nombre_usuario character varying(100) NOT NULL,
  email character varying(150) NOT NULL,
  hash_contrasena character varying(255) NOT NULL,
  rol character varying(20) NOT NULL,
  activo boolean DEFAULT true NOT NULL,
  es_sistema boolean DEFAULT false NOT NULL,
  intentos_fallidos integer DEFAULT 0 NOT NULL,
  bloqueado_hasta timestamp with time zone,
  ultimo_intento_fallido timestamp with time zone,
  fecha_creacion timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
  updated_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT usuarios_pkey PRIMARY KEY (id),
  CONSTRAINT usuarios_email_key UNIQUE (email),
  CONSTRAINT usuarios_nombre_usuario_key UNIQUE (nombre_usuario),
  CONSTRAINT usuarios_personal_id_key UNIQUE (personal_id),
  CONSTRAINT usuarios_personal_id_fkey FOREIGN KEY (personal_id) REFERENCES public.personal(id) ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE public.visitante (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  tipo_documento_id integer NOT NULL,
  numero_documento character varying(20) NOT NULL,
  nombres character varying(150) NOT NULL,
  apellidos character varying(150) NOT NULL,
  fecha_ultima_actualizacion_api timestamp with time zone,
  CONSTRAINT visitantes_pkey PRIMARY KEY (id),
  CONSTRAINT visitantes_tipo_documento_id_numero_documento_key UNIQUE (tipo_documento_id, numero_documento),
  CONSTRAINT visitantes_tipo_documento_id_fkey FOREIGN KEY (tipo_documento_id) REFERENCES public.tipodocumento(id)
);

CREATE TABLE public.config_asistencia_personal (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  personal_id integer,
  activo boolean DEFAULT true NOT NULL,
  aplica_desde date DEFAULT CURRENT_DATE NOT NULL,
  hora_entrada time without time zone DEFAULT '09:00:00'::time without time zone NOT NULL,
  hora_entrada_tarde time without time zone,
  minutos_tolerancia_por_dia integer DEFAULT 10 NOT NULL,
  dias_tolerancia_por_mes integer DEFAULT 10 NOT NULL,
  created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP,
  updated_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT config_asistencia_personal_pkey PRIMARY KEY (id),
  CONSTRAINT config_asistencia_personal_personal_id_fkey FOREIGN KEY (personal_id) REFERENCES public.personal(id) ON DELETE CASCADE
);

CREATE TABLE public.controlasistenciapersonal (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  personal_id integer NOT NULL,
  ingreso timestamp with time zone NOT NULL,
  salida timestamp with time zone,
  estado_presencia character varying(15) NOT NULL,
  minutos_tardanza integer DEFAULT 0,
  observacion text,
  usuario_registro_id integer NOT NULL,
  fecha_registro timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
  updated_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT controlasistenciapersonal_pkey PRIMARY KEY (id),
  CONSTRAINT controlasistenciapersonal_personal_id_fkey FOREIGN KEY (personal_id) REFERENCES public.personal(id),
  CONSTRAINT controlasistenciapersonal_usuario_registro_id_fkey FOREIGN KEY (usuario_registro_id) REFERENCES public.usuario(id),
  CONSTRAINT controlasis_salida_mayor_que_ingreso CHECK (((salida IS NULL) OR (salida >= ingreso)))
);

CREATE TABLE public.movimiento_asistencia (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  control_asistencia_id integer NOT NULL REFERENCES public.controlasistenciapersonal(id) ON DELETE CASCADE,
  tipo character varying(20) NOT NULL CHECK (tipo IN ('INGRESO', 'SALIDA_REFRIGERIO', 'RETORNO_REFRIGERIO', 'SALIDA')),
  fecha_hora timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
  observacion text,
  usuario_registro_id integer REFERENCES public.usuario(id),
  created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE public.registrovisita (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  sync_id character varying(255),
  estado_visita character varying(20) DEFAULT 'PENDIENTE'::character varying NOT NULL,
  visitante_id integer NOT NULL,
  area_destino_id integer NOT NULL,
  motivo_visita_id integer NOT NULL,
  personal_visitado_id integer,
  delegado_por_id integer,
  usuario_ingreso_id integer NOT NULL,
  usuario_salida_id integer,
  fecha_ingreso timestamp with time zone NOT NULL,
  fecha_salida timestamp with time zone,
  fecha_aceptacion timestamp with time zone,
  fecha_rechazo timestamp with time zone,
  motivo_rechazo text,
  fecha_delegacion timestamp with time zone,
  fecha_limite_ingreso timestamp with time zone,
  fecha_limite_salida timestamp with time zone,
  fecha_fin_atencion timestamp with time zone,
  CONSTRAINT registrosvisitas_pkey PRIMARY KEY (id),
  CONSTRAINT registrosvisitas_sync_id_key UNIQUE (sync_id),
  CONSTRAINT registrosvisitas_area_destino_id_fkey FOREIGN KEY (area_destino_id) REFERENCES public.areadestino(id),
  CONSTRAINT registrosvisitas_delegado_por_id_fkey FOREIGN KEY (delegado_por_id) REFERENCES public.personal(id),
  CONSTRAINT registrosvisitas_motivo_visita_id_fkey FOREIGN KEY (motivo_visita_id) REFERENCES public.motivovisita(id),
  CONSTRAINT registrosvisitas_personal_visitado_id_fkey FOREIGN KEY (personal_visitado_id) REFERENCES public.personal(id),
  CONSTRAINT registrosvisitas_usuario_ingreso_id_fkey FOREIGN KEY (usuario_ingreso_id) REFERENCES public.usuario(id),
  CONSTRAINT registrosvisitas_usuario_salida_id_fkey FOREIGN KEY (usuario_salida_id) REFERENCES public.usuario(id),
  CONSTRAINT registrosvisitas_visitante_id_fkey FOREIGN KEY (visitante_id) REFERENCES public.visitante(id)
);

CREATE TABLE public.justificacion (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  control_asistencia_id integer NOT NULL,
  estado character varying(20) DEFAULT 'PENDIENTE'::character varying NOT NULL,
  motivo text NOT NULL,
  evidencia_url text,
  usuario_solicitante_id integer NOT NULL,
  fecha_solicitud timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
  usuario_respuesta_id integer,
  fecha_respuesta timestamp with time zone,
  observacion_respuesta text,
  CONSTRAINT justificaciones_pkey PRIMARY KEY (id),
  CONSTRAINT justificaciones_control_asistencia_id_fkey FOREIGN KEY (control_asistencia_id) REFERENCES public.controlasistenciapersonal(id) ON DELETE CASCADE
);

CREATE TABLE public.reniecproveedor (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  nombre character varying(150) NOT NULL,
  base_url text NOT NULL,
  token text,
  activo boolean DEFAULT false NOT NULL,
  notas text,
  usuario_creador_id integer,
  fecha_creacion timestamp without time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
  fecha_actualizacion timestamp without time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
  fecha_activacion timestamp without time zone,
  fecha_desactivacion timestamp without time zone,
  CONSTRAINT reniecproveedores_pkey PRIMARY KEY (id),
  CONSTRAINT reniecproveedores_usuario_creador_id_fkey FOREIGN KEY (usuario_creador_id) REFERENCES public.usuario(id)
);

CREATE TABLE public.papeletaexterna (
  id integer GENERATED BY DEFAULT AS IDENTITY,
  external_id character varying(50) NOT NULL,
  codigo_papeleta character varying(50),
  solicitante_dni character varying(20),
  solicitante_nombres character varying(150),
  solicitante_apellidos character varying(150),
  solicitante_area character varying(150),
  motivo character varying(100),
  motivo_detalle text,
  fecha_salida timestamp with time zone,
  fecha_retorno timestamp with time zone,
  estado_original character varying(50),
  estado_virtual character varying(50),
  fecha_sincronizacion timestamp with time zone DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT papeletasexternas_pkey PRIMARY KEY (id),
  CONSTRAINT papeletasexternas_external_id_key UNIQUE (external_id)
);

-- ============================================
-- ÍNDICES (los que ya tenías en el dump)
-- ============================================

CREATE UNIQUE INDEX idx_config_asistencia_personal_unico ON public.config_asistencia_personal USING btree (personal_id) WHERE (activo = true);
CREATE UNIQUE INDEX idx_config_global ON public.config_asistencia_personal USING btree (((personal_id IS NULL))) WHERE (personal_id IS NULL);
CREATE UNIQUE INDEX idx_config_personal ON public.config_asistencia_personal USING btree (personal_id) WHERE (personal_id IS NOT NULL);
CREATE INDEX idx_papeletas_ext_dni ON public.papeletaexterna USING btree (solicitante_dni);
CREATE INDEX idx_papeletas_ext_fechas ON public.papeletaexterna USING btree (fecha_salida);
CREATE UNIQUE INDEX idx_personal_unico ON public.personal USING btree (tipo_documento_id, numero_documento);
CREATE INDEX idx_registros_visitas_area_fecha ON public.registrovisita USING btree (area_destino_id, fecha_ingreso);
CREATE INDEX idx_registros_visitas_estado ON public.registrovisita USING btree (estado_visita);
CREATE INDEX idx_registros_visitas_fecha_ingreso ON public.registrovisita USING btree (fecha_ingreso);
CREATE INDEX idx_registros_visitas_personal_visitado ON public.registrovisita USING btree (personal_visitado_id);
CREATE INDEX idx_registros_visitas_sync_id ON public.registrovisita USING btree (sync_id);
CREATE UNIQUE INDEX idx_reniec_proveedores_activo ON public.reniecproveedor USING btree (activo) WHERE (activo = true);
CREATE UNIQUE INDEX idx_unique_active_visit_per_visitor_area ON public.registrovisita USING btree (visitante_id, area_destino_id) WHERE (fecha_salida IS NULL);
CREATE INDEX idx_usuarios_personal_id ON public.usuario USING btree (personal_id);
CREATE INDEX idx_visitantes_documento ON public.visitante USING btree (tipo_documento_id, numero_documento);

-- ============================================
-- ÍNDICES RECOMENDADOS (FKs + consultas típicas)
-- ============================================

CREATE INDEX idx_personal_area_destino_id ON public.personal (area_destino_id);
CREATE INDEX idx_personal_tipo_contrato_id ON public.personal (tipo_contrato_id);
CREATE INDEX idx_personal_cargo_id ON public.personal (cargo_id);
CREATE INDEX idx_personal_activo ON public.personal (activo);
CREATE INDEX idx_usuario_rol_activo ON public.usuario (rol, activo);
CREATE INDEX idx_controlasistencia_personal_personal_ingreso ON public.controlasistenciapersonal (personal_id, ingreso);
CREATE INDEX idx_controlasistencia_personal_usuario_ingreso ON public.controlasistenciapersonal (usuario_registro_id, ingreso);
CREATE INDEX idx_registrovisita_visitante_fecha ON public.registrovisita (visitante_id, fecha_ingreso);
CREATE INDEX idx_registrovisita_motivo_visita_id ON public.registrovisita (motivo_visita_id);
CREATE INDEX idx_registrovisita_usuario_ingreso_id ON public.registrovisita (usuario_ingreso_id);
CREATE INDEX idx_registrovisita_usuario_salida_id ON public.registrovisita (usuario_salida_id);
CREATE INDEX idx_registrovisita_delegado_por_id ON public.registrovisita (delegado_por_id);
CREATE INDEX idx_justificacion_control_asistencia_id ON public.justificacion (control_asistencia_id);
CREATE INDEX idx_justificacion_estado ON public.justificacion (estado);
CREATE INDEX idx_justificacion_usuario_solicitante_id ON public.justificacion (usuario_solicitante_id);
CREATE INDEX idx_justificacion_usuario_respuesta_id ON public.justificacion (usuario_respuesta_id);
CREATE INDEX idx_reniecproveedor_usuario_creador_id ON public.reniecproveedor (usuario_creador_id);
CREATE INDEX idx_papeletaexterna_fecha_sincronizacion ON public.papeletaexterna (fecha_sincronizacion);
CREATE INDEX idx_movimiento_asistencia_control_id ON public.movimiento_asistencia(control_asistencia_id);

-- ============================================
-- TRIGGER
-- ============================================

CREATE TRIGGER tr_prevent_delete_system_user
BEFORE DELETE ON public.usuario
FOR EACH ROW
EXECUTE FUNCTION public.prevent_delete_system_user();

COMMIT;
